--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/springbackend?useSSL=false
-spring.datasource.username=springbackend
-spring.datasource.password=springbackend
+spring.datasource.url=jdbc:mysql://mariadb-service:3306/springbackend?useSSL=false
+spring.datasource.username=admin
+spring.datasource.password=Sahil@123
 
 spring.jpa.generate-ddl=true
